--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <title>Pizzaria Sapucaian's | Cliente</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="http://localhost:4000/logo.png">
+  <link rel="icon" type="image/png" href="/main/logo.png">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.2/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.5.1/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/main/style.css">
 </head>
 <body>
   <app-root></app-root>
