--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Pizzaria Sapucaian's | Cliente</title>
+  <title>Sys Sapucaian's | Cliente</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/main/logo.png">
@@ -11,6 +11,7 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.2/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.5.1/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="http://localhost:80/main/style.css"> -->
   <link rel="stylesheet" href="/main/style.css">
 </head>
 <body>
